src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Satisfy&display=swap");

:root {
  --font-satisfy: "Satisfy", serif;
  --font-roboto: "Roboto", serif;
  --font-poppins: "Poppins", serif;
}

.text-primary {
  color: #0ab2e5 !important;
}
.text-warning {
  color: #f97b17 !important;
}
.text-white {
  color: #fcfcfc !important;
}
.bg-primary {
  background: #0ab2e5 !important;
}
.btn-primary {
  background: #0ab2e5;
  border-color: #0ab2e5;
}
.bg-default {
  background-color: #f4f9f4;
}
.bg-white {
  background: #fcfcfc;
}
* img {
  max-width: 100%;
  height: auto;
}
.icon {
  font-size: 20px;
}
.mini-title h2 {
  color: #0ab2e5;
  font-family: var(--font-poppins);
  font-size: 40px;
  font-weight: 600;
  text-transform: capitalize;
}
.mini-title p {
  color: #333;
  font-family: var(--font-poppins);
  font-size: 18px;
  font-weight: 400;
  line-height: 27px;
  margin-top: 20px;
}
.loader {
  width: 40px;
  position: absolute;
  left: -31px;
  top: 0;
  z-index: 999;
}
h1,
h2,
h3,
h4,
h5,
h6,
span,
p,
a,
li {
  color: #333;
}
ection-title {
  text-align: center;
}
.section-title .title-info {
  text-align: center;
  font-family: var(--font-satisfy);
  font-size: 3rem;
  font-weight: 400;
}
.section-title .title-heading {
  font-family: var(--font-poppins);
  font-size: 65px;
  font-weight: 600;
}
.section-title .title-paragraph {
  font-family: var(--font-poppins);
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.625rem;
  width: 60%;
  margin: 0 auto;
}
.search-destination {
  background: #f4f9f4;
  gap: 31px;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 87%;
  z-index: 999;
  margin: 0 auto;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
}

.search-box-container {
  margin: 0 auto;
  top: 87%;
}
.travel-type-btn {
  height: 131px;
}

/* footer section */
.footer-top {
  padding-top: 100px;
  padding-bottom: 30px;
}
.footer .footer-top h4 {
  font-family: var(--font-poppins);
  font-size: 24px;
  font-weight: 400;
  line-height: 36px;
  margin-bottom: 20px;
}
.footer-top .quick-link a {
  font-family: var(--font-poppins);
  font-weight: 400;
  line-height: 24px;
  margin-bottom: 10px !important;
  transition: 0.2s;
}
.footer-top a:hover {
  color: #0ab2e5;
  text-decoration: none;
}
.footer p {
  margin-bottom: 0;
  font-family: var(--font-roboto);
  font-weight: 400;
  line-height: 24px;
  margin-bottom: 8px;
}
.footer p.para {
  font-family: var(--font-roboto);
  font-weight: 400;
  line-height: 24px;
  margin-bottom: 20px;
}
.footer-top span.date {
  display: inline-block;
  font-family: var(--font-roboto);
  font-weight: 600;
  line-height: 24px;
}
.footer-top input {
  background: #595959;
  color: #fcfcfc !important;
  font-family: var(--font-poppins);
  font-size: 14px;
  font-weight: 300;
  padding-top: 14px;
  padding-bottom: 14px;
}
.footer-top .form-control:focus {
  color: #fcfcfc;
  background: #595959;
  border-color: #635e5e;
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(89, 89, 89, 0.25);
}
.footer-top ::placeholder {
  color: #fcfcfc;
}

